--- a/AndroidPriceChecker/AndroidPriceChecker/Resources/layout/ProductList.axml
+++ b/AndroidPriceChecker/AndroidPriceChecker/Resources/layout/ProductList.axml
@@ -2,6 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/productListView" />
 </LinearLayout>
